Release 0.4-5:
  * Rewrote sweeper.
  * Remove -w and fix compiler warnings.
  * Update internal RNACI.

Release 0.4-4:
  * Add custom distribution function to replace pdgemr2d() for most purposes.
  * Fixed pdgemr2d() bug.
  * Fix several issues with condition numbers.
  * Some small internal cleanup.

Release 0.4-3:
  * Add pigemr2d() wrapper.
  * Added g2lcoord()
  * Fixed indxg2p bug indexing bug.
  * Swap floor() to as.integer() in indexing functions.

Release 0.4-2:
  * Fixed major problem with internal BLACS grid management with MKL.
  * Switched to a header-only RNACI.
  * Fixed build issues on Solaris (wcc).
  * Added flag to disable src/export_blacs (needed for Intel mpi).

Release 0.4-1:
  * Fixed mkgblmat bug when using non-full contexts.
  * Fixed build issue with Intel compilers.
  * Updated README.md.

Release 0.4-0:
  * Changed base api.
  * Numerous improvements to documentation.
  * Switched to roxygen2.
  * Numerous source organization improvements.

Release 0.3-0
  * Fixed compiler warnings generated from calling Fortran routines.
  * Cleaned up R wrappers.
  * Fixed memory/gc issue in R_PDGELS().
  * Nasty ICTXT bug in descinit (notably affecting Cpdgemr2d) fixed.
  * Modified matrix exponential kernels to take p as argument.
  * Fixed OpenMP issues in Intel compiler suite.
  * Fixed portability issue in Makevars.in.
  * Stopgap fixed regression in MKSUBMAT.
  * Stopgap fixed regression in MKGBLMAT.
  * Updated vignette format.
  * Fixed author affiliation in vignette.
  * Linked with SEXPtools.
  * Refactored internal wrappers to use SEXPtools.
  * Fixed ownany() bug fixed that affected some grid shapes.
  * Vignette copyright updated.
  * PDGELS bug fixes.

Release 0.2-3:
  * Fixed errors in manual.
  * Fixed matrix exponental bugs.
  * Added matrix exponentiation drivers.
  * Added experimental pdsyevx wrapper.
  * Added driver for (non-symmetric) eigenvalue calculator.

Release 0.2-2:
  * Nasty init.grid() bugfix.