@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/base_scalapack.r
-\name{base.rpdsyev}
-\alias{base.rpdsyev}
-\title{rpdsyev}
+\name{base.rpdsyevr}
+\alias{base.rpdsyevr}
+\title{rpdsyevr}
 \usage{
-base.rpdsyev(jobz, uplo, n, a, desca, descz)
+base.rpdsyevr(jobz, uplo, n, a, desca, descz)
 }
 \arguments{
 \item{jobz}{Control for if vectors/values/both are returned.}
